[gd_scene load_steps=11 format=2]

[ext_resource path="res://Interface/UI/TitleScreen/Buttons/StartButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/UI/TitleScreen/TitleScreen_UI.gd" type="Script" id=3]
[ext_resource path="res://Interface/UI/TitleScreen/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/UI/TitleScreen/Buttons/ExitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/jump_0.png" type="Texture" id=6]
[ext_resource path="res://Interface/Assets/Fonts/FredokaOne_16.tres" type="DynamicFont" id=7]
[ext_resource path="res://Interface/UI/Transitions/Fade.tscn" type="PackedScene" id=8]
[ext_resource path="res://Interface/Assets/Themes/default_theme.tres" type="Theme" id=9]
[ext_resource path="res://Interface/Assets/Fonts/FredokaOne_70.tres" type="DynamicFont" id=10]

[sub_resource type="StreamTexture" id=1]

[node name="TitleScreen_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0352941, 0.184314, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Logo" type="TextureRect" parent="Menu"]
visible = false
margin_right = 1680.0
margin_bottom = 37.0
texture = SubResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="Menu"]
margin_right = 1680.0
margin_bottom = 175.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
text = "DEBRIS DANGER
"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 179.0
margin_right = 1680.0
margin_bottom = 873.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 838.0
margin_bottom = 694.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="StartButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 229.0
margin_right = 838.0
margin_bottom = 294.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 314.0
margin_right = 838.0
margin_bottom = 379.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 399.0
margin_right = 838.0
margin_bottom = 464.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 694.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 287.0
margin_top = 187.0
margin_right = 551.0
margin_bottom = 507.0
texture = ExtResource( 6 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 877.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Version: 0.0.0 (MVP)
By Tobias \"Aneksuz\" Bergstr√∂m"

[node name="Fade" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]
